--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -31,21 +31,19 @@
 \end{abstract}
      
 \begin{resumo} 
-  Atualmente 1,4\% da energia mundial produzida é consumida por \textit{datacenters}. Cujas máquinas possuem uma composição da \textit{hardwares} convencionais com um alto consumo de energia. Existem, porém, dispositivos de arquitetura ARM que trazem como principal caracteristica o baixo consumo, e ainda sim podem vir também a atender as demandas computacionais de uma nuvem. Portanto, esse trabalho tem como objetivo comparar a eficiência energética aplicada ao teste presente, entre a pequena Raspberry PI 3 e a XPS, possuindo arquitetura ARM e x64 respectivamente .
+  Atualmente 1,4\% da energia mundial produzida é consumida por \textit{data centers}. Cujas máquinas possuem uma composição da \textit{hardwares} convencionais com um alto consumo de energia. Existem, porém, dispositivos de arquitetura ARM que trazem como principal características o baixo consumo, e ainda sim podem vir também a atender as demandas computacionais de uma nuvem. Portanto, esse trabalho tem como objetivo comparar a eficiência energética aplicada ao teste presente, entre a pequena Raspberry PI 3 e a XPS, possuindo arquiteturaa ARM e x64 respectivamente .
 \end{resumo}
 
 
 \section{Introdução}
-  Com a popularização do uso de serviços providos pela computação em nuvem, o consumo energético dos data centers também aumentou, chegando a 270 TWh em 2012 com uma taxa de crescimento anual composta (CAGR) de 4.4\% entre 2007 e 2012 \cite{VanHeddeghem:2014:TWI:2657027.2657141}. Buscando alternativas de evitar esse alto consumo energético das máquinas convencionais utilizadas em data centers, o uso de dispositivos com arquitetura ARM, que possuem baixo consumo energético, são uma das estratégias possíveis.
+  Com a popularização do uso de serviços providos pela computação em nuvem, o consumo energético dos \textit{data centers} também aumentou, chegando a 270 TWh em 2012 com uma taxa de crescimento anual composta (CAGR) de 4.4\% entre 2007 e 2012 \cite{VanHeddeghem:2014:TWI:2657027.2657141}. Buscando alternativas de evitar esse alto consumo energético das máquinas convencionais utilizadas em data centers, o uso de dispositivos com arquitetura ARM, que possuem baixo consumo energético, são uma das estratégias possíveis.
 
 
   Em \cite{Joao}, foi implementado um nó computacional utilizando uma Raspberry PI B+ afim de comparar o consumo energético em meio a nuvem.
-  Na continuidade do trabalho, em \cite{eu} foi realizado um estudo comparando o consumo energético e o desempenho da Raspberry PI B e Raspberry PI 3 B utilizando o \textit{benchmark YCSB}  \textbf{REFERENCIA DO BENCHMARK}. %o que a sigla significa?
-  Este trabalho propõem uma comparação do consumo energético e desempenho da Raspberry PI 3 B e uma máquina com arquitetura x64. Para tais testes, criou-se um servidor em ambas as máquinas hospedando um site onde seria possível apenas executar requets de acesso, após, escolheu-se as ferramentas necessárias para o controle de consumo de energia dos dispositivos, tendo em vista que a forma de mensuração seria diferente em cada, dada pela arquitetura e pelo consumo esperada por ambas.
-
-
-
-  Posteriormente iniciou-se um ataque DoS(\textit{Denial of Service}), encarregado de realizar os \textit{requests} até o número limite ou ocasionando a queda do servidor, a fim de obter um número aproximado de o quanto a Raspberry PI 3 seria capaz de fornecer um serviço de mesma qualidade gerando um consumo energético menor.
+  Na continuidade do trabalho, em \cite{eu} foi realizado um estudo comparando o consumo energético e o desempenho da Raspberry PI B e Raspberry PI 3 utilizando o \textit{benchmark YCSB (Yahoo! Cloud Serving Benchmark)}\cite{Git}. Este trabalho propõem uma comparação do consumo energético e desempenho da Raspberry PI 3 e uma máquina com arquitetura x64. 
+  
+  %Quero mudar essa parte
+  Para tais testes, criou-se um servidor em ambas as máquinas hospedando um site onde seria possível apenas executar requets de acesso, após, escolheu-se as ferramentas necessárias para o controle de consumo de energia dos dispositivos, tendo em vista que a forma de mensuração seria diferente em cada, dada pela arquitetura e pelo consumo esperada por ambas.Posteriormente iniciou-se um ataque DoS(\textit{Denial of Service}), encarregado de realizar os \textit{requests} até o número limite ou ocasionando a queda do servidor, a fim de obter um número aproximado de o quanto a Raspberry PI 3 seria capaz de fornecer um serviço de mesma qualidade gerando um consumo energético menor.
 
 
 
@@ -55,91 +53,63 @@
 \section{Trabalhos Relacionados} \label{sec:trabCorrelatos}
   
  
-   \cite{Joao} propôs avaliar a substituição do hardware convencional por um hardware de baixo consumo que respeite o Service-Level-Agreement (SLA) e reduza o consumo de energia dos \textit{data centers}, assim tornando viável o uso de uma \textit{Small Board} em uma nuvem computacional.
-
-
-Assim, foi possível implementar uma Raspberry PI B+ como um nodo computacional de baixo consumo, com as devidas adaptações para manter a compatibilidade com a arquitetura ARM. A nuvem foi composta de 10 computadores convencionais de arquitetura x64, sendo nove nodos computacionais e um de controle, e junto desses nodos havia a Rasbpberry como um nodo adicional.
+   \cite{Joao} propôs avaliar a substituição do \textit{hardware} convencional por um \textit{hardware} de baixo consumo que respeite o \textit{Service-Level-Agreement} (SLA) e reduza o consumo de energia dos \textit{data centers}, assim tornando viável o uso de \textit{Small Board} em uma nuvem computacional. Assim, foi possível implementar uma Raspberry PI B+ como um nodo computacional de baixo consumo, com as devidas adaptações para manter a compatibilidade com a arquitetura ARM. A nuvem foi composta de 10 computadores convencionais de arquitetura x64, sendo nove nodos computacionais e um de controle, e junto desses nodos havia a Rasbpberry como um nodo adicional.
 
 %  Com isso, implementou a Raspbarry PI B+ como um nodo computacional de baixo consumo, realizando as adaptações necessárias para compatibilidade com a arquitetura ARM, precisando escolher um \textit{hypervision} adequado para tal. A nuvem era composta por 10 computadores de arquitetura x64, sendo nove deles nodos computacionais e um nodo de controle, em meio a essa composição a Raspberry vinha à acrescer como mais um nodo computacional.
 
-
-  A medição foi realizada utilizando o bechmark YCSB, %(\textit{Yahoo! Cloud Serving Benchmark}) não precisa repetir o que a sigla significa se tu já colocou isso antes
-     voltado para avaliar nuvens. Os resultados foram obtidos por meio da vazão de operações, onde foi observado um gargalo de processamento em comparação ao nó de um baixo consumo. Porém, a implementação da Rapberry PI B+ em uma nuvem ainda sim é vantajosa, 
-
-%reescrever
-    
-    onde as características batam com as desempenhada pelo \textit{benchmark}.
-%?????????????????????????????
-
-  Em \cite{PiConsumo}, foi proposto um data center composto por Raspberry Pi, %ver qual o modelo foi usado
-  voltado para o baixo consumo energético.
-  
-  
-  %segue a mesma preocupação com o alto consumo de energia vindo das \textit{clouds},                 tirei
-  
-  porém até 2012, %a gente precisa ver alguma ref mais nova, vai fazer 7 anos isso já
-  10,82\% da população mantem assinatura de banda larga até, mantendo 770 milhões de gateways domeśtico ao redor do mundo. Tendo um consumo de 10W cada, %cada gateway?
-  gerando um consumo unitário de 6,7TWh ao ano o que soma em 0,03\% na energia consumida mundialmente.
-  Levando em consideração que o maior consumo ocorre por parte de máquinas com um \textit{hardware} mais poderoso, ainda sim não se pode ignorar o consumo vindo por parte de tais dispositivos, pois 43\% dos mesmo se mantem ligados diariamente e muitas vezes ociosos, durante esse período de ociosidade, poderia vir desempenhar funções de pré-carregamento para usuario (ou seja, armazenamento em cache, pré-busca de conteúdo, execução de serviços locais).
-%===parei aqui
-
-  A Raspberry PI vem sendo utilizada para inúmeras aplicações no qual fomenta o uso de tais aplicações com a visão em baixo consumo energético, com isso \cite{PiConsumo} apresenta o PowerPi um modelo de  potência concentrando-se no consumo de energia da Raspberry PI a fim de derivar novas possíveis estratégias de consumo de energia.
+%GUI: rever esse ponto.
+  A medição foi realizada utilizando o bechmark YCSB, voltado para avaliar nuvens. Os resultados foram obtidos por meio da vazão de operações, onde foi observado um gargalo de processamento no nó de baixo consumo %pq o gargalo?
+. Porém, a implementação da Rapberry PI B+ em uma nuvem ainda sim é vantajosa para operações as quais sua capacidade computacional demonstran-se suprir.
 
 
-  Tais \textit{Smaal Board} vem crescendo em uso no conceito \textit{green computing}, com isso \cite{2018CLOUDSPiA}, faz uso de SDN (Software Defined Networking), que fornece uma visão logicamente centralizada da rede em um único ponto, o que permite que a rede se torne uma plataforma programável que pode se adaptar dinamicamente ao seu comportamento. Porém as \textit{cloud} vem em uma crescente expansão, aumentando em números e tamanhos os \textit{data centers}, fazendo com que a infraestrutura de tais aumente conforme há o aumento da demanada o que torna uma real escalada nas nuvens, porém SDN traz consigo a capacidade da redução da complexidade de tais redes gerando uma visão mais simples das das mesmas. Com isso apresentam o CLOUDS-Pi uma nuvem com composição heterogenia no qual integou-se as Raspberry PI, Contruindo uma rede de pequena escala, compondo esforços para união da ferramenta ao \textit{hardware} de baixo consumo.    
+  Levando em conta que a maior parte da população mantem assinatura de banda larga, mantendo milhões de gateways domeśtico ao redor do mundo.
+  Considerando que o maior consumo ocorre por parte de máquinas com um \textit{hardware} mais poderoso, ainda sim não se pode ignorar o consumo vindo por parte de tais dispositivos, pois 43\% dos mesmo se mantem ligados diariamente e muitas vezes ociosos, durante esse período de ociosidade, poderia vir desempenhar funções de pré-carregamento para usuario (ou seja, armazenamento em cache, pré-busca de conteúdo, execução de serviços locais).
+Partindo de tais estrategias, \cite{PiConsumo} apresenta o PowerPi, um modelo de potência concentrando-se no consumo de energia da Raspberry PI a fim de derivar novas possíveis estratégias de consumo de energia.
+
+%"COM ISSO" NAO GOSTEI
+  Desse modo \cite{2018CLOUDSPiA}, faz uso de SDN (\textit{Software Defined Networking}), que fornece uma visão logicamente centralizada da rede em um único ponto, permitindo que a rede se torne uma plataforma programável, podendo ser adaptada dinâmicamente ao seu comportamento. Porém, o serviço de nuvem se mantém em uma crescente expansão, aumentando em números e tamanhos os %aumentando em números ica mto zoado
+  \textit{data centers}, fazendo com que a infraestrutura de tais aumente conforme há o aumento da demanada, entretando, SDN traz consigo a capacidade da redução da complexidade de tais redes, gerando uma visão mais simples das mesmas. Com isso apresentam o CLOUDS-Pi uma nuvem de composição heterogenia no qual integou-se as Raspberry PI,%VER MODELO
+  contruindo uma rede de pequena escala, compondo esforços para união da ferramenta ao \textit{hardware} de baixo consumo.    
   
 
 
 \section{Metodologia} \label{sec:metodologia}
-  Nesta seção aborda-se a metodologia aplicada na realização do trabalho, o \textit{hardware} utilizado na comparação, as ferramentas utilizadas e aplicada alem das maneiras optadas para mensuração da energia consumida para que assim pudesse ser aplicado o método de análise estatística dos resultados.
+  Nesta seção aborda-se a metodologia aplicada na realização do trabalho, o \textit{hardware} utilizado na comparação, as ferramentas utilizadas e aplicada além das maneiras optadas para mensuração da energia consumida, para que assim pudesse ser aplicado o método de análise estatística dos resultados.
 
 
   \subsection{Ataque de negação de serviço} \label{sec:ddos}
-    Populares no âmbito de redes, os ataques do tipo DoS, ocorrem através do envio indiscriminado de requisições a um computador ou servidor alvo, causando-o uma sobrecarga, visando causar a indisponibilidade do serviço. Esses alvos escolhidos pelos atacantes(quem coordena o ataque) tenta tornar o conteúdo hospedado indisponível para qualquer outro utilizador, não se caracterizando como invasão de sistema visto que somente indisponibiliza o serviço. Pode-se dizer que é basicamente o ocorrido com telefonias em datas comemorativas como "noites de natal e ano novo, quando milhares de pessoas decidem, simultaneamente, cumprimentar à meia-noite parentes e amigos no Brasil e no exterior. Nos cinco minutos posteriores à virada do ano, muito provavelmente, você simplesmente não conseguirá completar a sua ligação, pois as linhas telefônicas estarão saturadas"\cite{ddOS}.
+    Populares no âmbito de redes, os ataques do tipo DoS, ocorrem por meio do envio indiscriminado de requisições a um computador ou servidor alvo, causando-o uma sobrecarga, visando causar a indisponibilidade do serviço. Esses alvos escolhidos pelos atacantes (quem coordena o ataque), tenta tornar o conteúdo hospedado indisponível para qualquer outro usuario, não se caracterizando como invasão de sistema visto que somente indisponibiliza o serviço. Pode-se dizer que é basicamente o ocorrido com telefonias em datas comemorativas como "noites de natal e ano novo, quando milhares de pessoas decidem, simultaneamente, cumprimentar à meia-noite parentes e amigos no Brasil e no exterior. Nos cinco minutos posteriores à virada do ano, muito provavelmente, você simplesmente não conseguirá completar a sua ligação, pois as linhas telefônicas estarão saturadas"\cite{ddOS}.
 
 
-    O ataque do tipo DoS envolve somente um atacante ou seja é necessário somente um único computador para realizar inúmeras requisições ao alvo, ataques de tais tipos pode vir a derrubar somente servidores fracos e computadores comuns com pouca banda e com baixas especificações técnicas. Diferente dos ataques de DDoS (\textit{Distributed Denial of Service}), onde um computador mestre(maquina que recebe os parâmetros para o ataque e controla os zumbis) pode vir a gerenciar milhões de computadores chamados de zumbis(programas de agente, que se conecta de volta a um host mestre predefinido), que fora plantado em hosts remotos e ficam ociosos esperando o comando de ataque a vitima(alvo do ataque), ou seja, dessa forma os ataque são gerados por milhares de hosts incessantemente gerando centenas de megabits por segundo de inundação \cite{ddOS2}. 
+    O ataque do tipo DoS envolve somente um atacante ou seja é necessário somente um único computador para realizar inúmeras requisições ao alvo, ataques de tais tipos pode vir a derrubar somente servidores fracos e computadores comuns com pouca banda e com baixas especificações técnicas. Diferente dos ataques de DDoS (\textit{Distributed Denial of Service}), onde um computador mestre (maquina que recebe os parâmetros para o ataque e controla os zumbis), pode vir a gerenciar milhões de computadores chamados de zumbis (programas de agente, que se conecta de volta a um host mestre predefinido), que fora plantado em hosts remotos e ficam ociosos esperando o comando de ataque a vitima(alvo do ataque), ou seja, dessa forma os ataque são gerados por milhares de hosts incessantemente gerando centenas de megabits por segundo de inundação \cite{ddOS2}. 
   
   \subsection{Ataque utilizando DoS} \label{sec:ataquedos}
-    Existem diferentes tipo de ataques que podem ser utilizado de acordo com a intenção do atacante, no presente artigo, focaremos somente em ataques volumétricos, como dito antes brevemente, ocasionando uma inundação, ou seja tratar de congestionar a rede com um grande volume de tráfego que sobrecarregue a banda até o serviço estar indisponível para acesso. Para execução utilizou-se o ataques DoS, que mostrou-se mais do que suficiente pela especificação dos \textit{hardwares} em teste.
+    Existem diferentes tipos de ataques que podem ser utilizados de acordo com a intenção do atacante, 
+    %=============tenta reescrever essa parte. tem muita vírgula e fica estranho de se ler (não é pra só tirar as vírgulas)
+    no presente artigo, focaremos somente em ataques volumétricos, como dito antes brevemente, ocasionando uma inundação, ou seja tratar de congestionar a rede com um grande volume
+    %============
+    de tráfego que sobrecarregue a banda até o serviço estar indisponível para acesso. Para execução utilizou-se o ataques DoS, que mostrou-se mais do que suficiente pela especificação dos \textit{hardwares} em teste.
          
-
-  %\subsection{servidor NGINX} \label{sec:nginx}
-    %O \textit{nginx} \cite{nginx} vem em uma constante crescente a alguns anos como servidor HTTP (\textit{Hypertext Transfer Protocol}, o site W3Techs\cite{w3techs}, especializado em dados estatístico de tecnologia voltada a web, informou que desde 2015 tem mantido a opção como segundo servidor mais utilizado, com seus 38\% e garantindo o primeiro lugar em crescimento mais acelerado atualizado em 2018.\\
-    %Logo na necessecidade de criação de um servidor, entre as inúmeras ferramentas que nos são disponibilizadas no mercado, \textit{nginx} provou ser uma excelente escolha para esse trabalho, atendendo as necessidades trazida pelo mesmo além de ser uma ferramenta simples de se manipular.\\
-    
-    % Caso nao tenha a proxima SubSection definiria as configuraçãoes do servidor em um parágrafo aqui
-
-    %Fazendo uso das configurações \textit{default} disponibilizadas, realizando somente algumas alterações de permissão de acesso, para que nem um usuário indesejado consiga ter acesso ao mesmo, mantendo assim somente uma ligação, entre a vitima e o atacante.    
-
   
   % Prentendo espesificar o que esta hospedado no servidor
   \subsection{Hospede} \label{sec:site}
     %Todos esse sites ja sao utilizados no portugues ? precisa-se colocar em italico ?
-    Para uma simulação mais próxima da realidade, hospedou-se um \textit{site} insignificante em processos comparado ao que se tem atualmente no mercado disponível, porém mesmo que simples, pode-se simular os \textit{request}, para adquirir os dados que desejávamos e ver até que ponto a Raspberry PI 3 conseguia competir com o \textit{desktop} XPS.
+    
+    %R: não sei
+    
+    Para a simulação os testes, hospedou-se um \textit{site} onde a única operação possível foi a realização de \textit{requests}, permitindo assim obter uma comparação do quanto a Raspberry PI 3 conseguiria competir com a \textit{desktop} XPS.
 
 
     Mesmo tendo em vista que muitos dos \textit{sites} atuais trabalham com um poderoso banco de dados por trás deles, pelo fato de cadastros pessoais ou a alta do \textit{e-commerce}, temos ainda \textit{sites} simples dos quais não se exige um grande poder do servidor para mante-los estáveis para acesso dos usuários, não sendo o atual foco do trabalho a complexidade do hospede e sim ter algo com que se possa trabalhar nos testes.
 
 
-    Composto por somente uma \textit{homepage} para atender os \textit{request}, o \textit{site} conta com uma estrutura simples em \textit{html}, \textit{css} juntamente a \textit{javascript}, tal \textit{Template} fora adquirida de forma totalmente gratuita no Free CSS \cite{sitesFree}, garantindo assim um hospede para os testes.
+    Composto por somente uma \textit{homepage} para atender os \textit{request}, o \textit{site} conta com uma estrutura simples em \textit{html}, \textit{css} juntamente a \textit{javascript}, tal \textit{Template} fora adquirida de forma totalmente gratuita no Free CSS \cite{sitesFree}.
 
 
-  % aqui tirei uma subsection que falria sobre os codigos ja que parecem desnecessaria
 
-  %\subsection{\textit{Running avarege power limit}} \label{sec:RAPL}
-    
-    % \cite{http://ix.cs.uoregon.edu/~slabasan/webdocs/posters/IntelRAPL_SC12.pdf}
-
-    % esse usei as explicacoes como base \cite{https://github.com/powercap/raplcap} se enquadra como refencia
-
-    %Tal tecnologia da liberdade de configuração dos limites de energia diretamente em componentes de \textit{hardware} como processadores e memoria principal. Os componentes gerenciam a si mesmo para respeitar tais limites imposto logo permite ao usuário que manipule os processadores "para maximizar um orçamento de poder do sistema" \cite{RAPL}, uma vez sem a imposição dos limites, a máquina tem liberdade de usar o necessário para alcançar seu desempenho.\\
-    %Graças a essa função Tfett \cite{RAPLGit}, estendeu o trabalho com RALP para medir a energia consumida pelo tempo de duração de um executável qualquer. Isso tornou-se possivel pela modificação o RAPL para obter o argumento por linha de comando que é executado por uma chamada de sistema, quando o argumento em execução retorna, a energia total consumida durante sua execução no nível de pacote da CPU é obtida como saída.\\ 
-    %Com algumas modificações no código realizado por usuários da comunidade, possibilitou deixar o código executando sem a necessidade de passar um executável por linha de comando, podendo monitorar aproximadamente o que a máquina está consumindo durando o período de execução do código. Disponibilizado como código aberto no GitHub, qualquer usuário pode vir ater acesso para uso ou para melhorias como ocorreu com o mesmo.
-
-  %\subsection{Hadware em comparação} \label{sec:hardware}
-    % Essa parte escontrava-se no meu ultimo artigo que define bem a raspberry posso utilizar, ou reescrever como como realizo essa questao ?
-    %Os computadores Raspberry PI foram originalmente concebidos para inspirar jovens programadores a aprimorar seu talento em codificação, ganhando um lugar no curso de informática na Universidade de Cambridge~\cite{pi2013raspberry}. Esse dispositivo pode ser adquirido por um valor razoavelmente baixo além de sua utilização em automações de diversos meios. As características de \textit{hardware} do dispositivo será apresentada na Tabela~\ref{tab:especificacao}.
+\subsection{Hadware em comparação} \label{sec:hardware}
+% Essa parte escontrava-se no meu ultimo artigo que define bem a raspberry posso utilizar, ou reescrever como como realizo essa questao ? R: acho que ta ok
+Os computadores Raspberry PI foram originalmente concebidos para inspirar jovens programadores a aprimorar seu talento em codificação, ganhando um lugar no curso de informática na Universidade de Cambridge~\cite{pi2013raspberry}. Esse dispositivo pode ser adquirido por um valor razoavelmente baixo além de sua utilização em automações de diversos meios. As características de \textit{hardware} do dispositivo será apresentada na Tabela~\ref{tab:especificacao}.
 
     \begin{table}[!h]
     \centering
@@ -159,8 +129,10 @@ Assim, foi possível implementar uma Raspberry PI B+ como um nodo computacional 
     \end{table}
     %Aqui descreverei um pouco do desktop utilizado para teste
     %Utilizei o comando DMIDECODE para ter um conjunto mais espesifico de informacoes sobre o desktop  
-    O \textit{desktop} selecionado para tal comparativo foi a Dell XPS ----------------- \cite{DellXPS}, suas especificações se encontrão presente na Tabela \ref{tab:especificacaoDesktop}, informações obtidas através do comando \textit{dmidecode}, o qual apresenta todas informações disponíveis sobre o dispositivo, possibilitando uma pesquisa mais especifica dentro dele atribuindo ao comando \textit{dmidecode --type} concatenado com uma chave da tabela de representação do comando, como a chave quatro, nos demonstrará todas especificações do processador e assim por diante.\\ 
-    %Suas principais escolha para comparativo, foi seu processador, que nos possibilita a utilização do RAPL \ref{sec:RAPL}, dessa forma tornou-se possível a obtenção de informações do consumo energético do dispositivo enquanto rodava as aplicações. Mesmo sendo um máquina muito superior a Raspberry PI bastando olhar para as duas tabelas, nossa intenção era mostrar até que ponto a pequena \textit{small board} consegue correr ao lado da poderosa XPS, o quanto isso é viável para conseguir uma economia energética associada a eficiência de tal aplicação.
+    O \textit{desktop} selecionado para tal comparativo foi a Dell XPS %NUMERO MODELO
+    \cite{DellXPS}, suas especificações se encontrão presente na Tabela \ref{tab:especificacaoDesktop}, informações obtidas através do comando \textit{dmidecode}, o qual apresenta todas informações disponíveis sobre o dispositivo, possibilitando uma pesquisa mais especifica dentro dele atribuindo ao comando \textit{dmidecode --type} concatenado com uma chave da tabela de representação do comando, como a chave quatro, nos demonstrará todas especificações do processador e assim por diante.\\ 
+    %OLHA ESSE ESTROFRE, ABAIXO PARECE INTERESSANTE
+    %Mesmo sendo um máquina muito superior a Raspberry PI bastando olhar para as duas tabelas, nossa intenção era mostrar até que ponto a pequena \textit{small board} consegue correr ao lado da poderosa XPS, o quanto isso é viável para conseguir uma economia energética associada a eficiência de tal aplicação.
 
     \begin{table}[!h]
     \centering
@@ -181,9 +153,11 @@ Assim, foi possível implementar uma Raspberry PI B+ como um nodo computacional 
     \end{table}
 
   \subsection{Metodologia dos testes} \label{sec:testes}
-    Logo após o preparo do servidor e de seu hóspede, tendo em mãos as máquinas XPS e Raspberry PI3, pode-se dar início aos testes, colocando as mesmas configurações de servidor e hospede tanto numa quanto na outra, mudando somente a vitima e o atacante. Em primeiro momento o atacante foi o XPS, o qual rodou um ataque DoS em python, realizando um numero de \textit{request} passado pelo DoS, direcionando esse ataque inteiramente para Raspberry PI 3.\\
-    Enquanto a XPS efetuava os ataques um código em nodejs executou o papel de ficar escutando todos os \textit{resquests} recebidos, dessa forma tornou-se possível a verificação do número de acesso que o servidor pode atender até seu serviço ser derrubado. Para mensuração do consumo energético utilizou-se um multímetro captando a corrente elétrica total circulada pela placa, com tal valor em mãos calculou-se a potência a partir da fórmula, \textit{Potência = Tensão * Corrente}, logo tornou-se possível realizar o somatório da potência em relação ao tempo, para encontrar a energia total consumida durante a exposição do dispositivo ao ataque, fazendo uso da fórmula a seguir. $$E = \sum_{n=1}^{t} P*t$$ \\
-    % Em um segundo momento onde a XPS fez o papel de servidor, logo se tounou a vitima, para realizar a captação do consumo energético fez-se uso da tecnologia RAPL, podendo dessa forma chegar a um valor aproximado do consumo alem de ser uma forma segura, para poder seguir tais passos imposto teve-se de utilizar uma outra maquina XPS, de mesma configuração para ser a atacante, pelas exigência e disponibilidade do RALP para tal maquina, agora executamos o mesmo código anteriormente executado na vitima XPS, em ambos dispositivos o script foi executado 30 vezes com três valores de \textit{request}, 500 mil, 800 mil e 1 milhão consecutivamente para uma aquisição de dados mais solida.
+  
+  %=========================== parei aqui, mas pode ir aterando o preparo do bolo \/. pega do que eu tinha alterado do relatório
+    Logo após o preparo do servidor e de seu hóspede, pode-se dar início aos testes, configurando ambas da mesma forma, mudando somente a vitima e o atacante. Em primeiro momento o atacante foi o XPS, o qual rodou um ataque DoS em python, que realizando um numero de \textit{request} passado pelo DoS, direcionando esse ataque inteiramente para Raspberry PI 3.\\
+    Enquanto a XPS efetuava os ataques o código utilizado retornava todos os \textit{resquests} atendidos/negados, dessa forma tornou-se viavel a verificação do número de acessos que o servidor pode atender até seu serviço ser derrubado. Para mensuração do consumo energético utilizou-se um multímetro captando a corrente elétrica total circulada pela placa, com tal valor em mãos calculou-se a potência a partir da fórmula, \textit{Potência = Tensão * Corrente}, logo tornou-se possível realizar o somatório da potência em relação ao tempo, para encontrar a energia total consumida durante a exposição do dispositivo ao ataque, fazendo uso da fórmula a seguir. $$E = \sum_{n=1}^{t} P*t$$ \\
+    Em um segundo momento onde a XPS fez o papel de servidor, logo se tounou a vitima, para realizar a captação do consumo energético fez-se uso de um \textit{hardware} o qual realizava a medição segundo a formula, retornando o consumo de energia total consumida, dando continuidade executou-se o ataqu. Em ambos dispositivos o script foi executado 30 vezes com três valores de \textit{request}, 500 mil, 800 mil e 1 milhão consecutivamente para uma aquisição de dados mais solida.
 
 
 % \section{Resultados obtidos} \label{sec:resultados}
